--- a/docker/chi-arches/chiarches/arches/app/templates/views/graph/graph-designer/permission-settings-form.htm
+++ b/docker/chi-arches/chiarches/arches/app/templates/views/graph/graph-designer/permission-settings-form.htm
@@ -13,7 +13,7 @@
         <!-- Help/Instructions -->
         <div class="permissions-instructions-panel">
             <p class="mpm-instruction">
-                To set permissions: <strong>Select or more the card</strong> from the list on the left, then select a Group or User Account from the dropdown below. Click <strong>Apply Permissions</strong> to set your changes, which will be reflected in the icons in the list on the left.
+                To set permissions: <strong>Select one or more cards</strong> from the list on the left, then select a Group or User Account from the dropdown below. Click <strong>Apply Permissions</strong> to set your changes, which will be reflected in the icons in the list on the left.
             </p>
         </div>
 
@@ -38,7 +38,7 @@
         </div>
 
 
-        <!-- Permissions Selector -->   
+        <!-- Permissions Selector -->
         <div class="form-group">
             <div class="permission-selector">
                 <div>{% trans 'Permissions' %}</div>
@@ -56,7 +56,7 @@
                 </ul>
             </div>
         </div>
-        
+
 
         <!-- Buttons -->
         <!-- ko with: permissionsDesigner.permissionSettingsForm -->
@@ -90,7 +90,7 @@
                 </div>
             </div>
         </div>
-    
+
     </div>
     <!--/ko-->
 </div>
