--- a/docker/chi-arches/chiarches/arches/app/media/css/arches.css
+++ b/docker/chi-arches/chiarches/arches/app/media/css/arches.css
@@ -62,7 +62,6 @@ dl.inline-flex dd {
 
 .navbar-header {
     height: 50px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.4);
 }
 
 .arches-navbar {
@@ -140,10 +139,6 @@ dl.inline-flex dd {
 #mainnav-container {
     padding-top: 50px;
     background-color: #2d3c4b;
-}
-
-#mainnav-menu .arches {
-    margin-left: -25px;
 }
 
 .list-group.bg-trans .list-group-item:not(.active):not(.disabled) {
@@ -8223,15 +8218,6 @@ div.row.widget-wrapper.report-header:hover {
     background: #fbfbfb;
 }
 
-.plugin-main .map-report-header-container {
-    height: 100%;
-}
-
-.plugin-main .row.widget-wrapper.report-header {
-    padding: 0;
-    margin: 0;
-}
-
 .expanded-map {
     position: absolute;
     top: 50px;
@@ -10628,7 +10614,7 @@ a.search-facet-item.disabled {
 }
 
 .graph-designer-tab-container .nav-tabs>li:not(.active)>a {
-    color: #777;
+    color: #999;
 }
 
 .graph-designer-tab-container .nav-tabs>li:not(.active)>a:hover {
@@ -11566,7 +11552,6 @@ ul.select2-choices:after {
     border-right: solid 1px gainsboro;
     height:100%;
     z-index: 3;
-    font-size: 11px;
 }
 
 .sidepanel-draggable div {
@@ -11591,7 +11576,6 @@ ul.select2-choices:after {
 .left-panel-overflow {
     height: calc(100vh - 225px);
     overflow-y: auto;
-    background: #f4f4f4;
 }
 
 .main-panel{
@@ -11697,11 +11681,10 @@ ul.select2-choices:after {
 .resource-editor-tree {
     overflow-y: auto;
     height: 100%;
-    background: #f4f4f4;
 }
 
 a.jstree-anchor strong {
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .expanded-nav {
@@ -11723,7 +11706,7 @@ a.jstree-anchor.disabled {
 }
 
 a.jstree-anchor.permissions-widget {
-    color: #bbb;
+    color: #ccc;
     cursor: default;
     pointer-events: none;
 }
