--- a/docker/chi-arches/chiarches/arches/app/templates/index.htm
+++ b/docker/chi-arches/chiarches/arches/app/templates/index.htm
@@ -75,10 +75,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
                 <div class="menu-container">
                     <ul class="nav navbar-nav">
                         <li class="page-scroll">
-                            <a href="#about">{% trans "About Arches" %}</a>
+                            <a href="#about">{% trans "About Tohua" %}</a>
                         </li>
                         <li class="page-scroll">
-                            <a href="#services">{% trans "Capabilities" %}</a>
+                            <a href="#services">{% trans "CHI" %}</a>
                         </li>
                         <li class="page-scroll">
                             <a href="#news">{% trans "News" %}</a>
@@ -136,12 +136,12 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- LAYERS -->
                         <div class="tp-caption rs-caption-1 sft start text-bold" delay="4500" data-x="center" data-hoffset="0" data-y="100" data-speed="800" data-start="1000" data-easing="Back.easeInOut" data-endspeed="300">
-                            Arches
+                            Tohua
                         </div>
 
                         <!-- LAYER -->
                         <div class="tp-caption rs-caption-2 sft" data-x="center" data-hoffset="0" data-y="200" data-speed="1000" data-start="3000" data-easing="Power4.easeOut" data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                            {% trans "A Data Management and Integration Platform<br> To Preserve and Protect Cultural Heritage." %}
+                            {% trans "A Data Management and Integration Platform<br> To Preserve and Protect Auckland's Cultural Heritage. <i>Powered by Arches.</i>" %}
                         </div>
 
                         <!-- LAYER -->
@@ -157,7 +157,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo:  https://www.flickr.com/photos/bibendum84/ (CC BY 2.0)</span>
+                            <span class="">Photo:  https://nzhistory.govt.nz/media/photo/auckland-town-hall/</span>
                         </div>
                     </li>
 
@@ -183,7 +183,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo:  https://www.flickr.com/photos/davidedamico/ (CC BY 2.0)</span>
+                            <span class="">Photo:  https://nzhistory.govt.nz/media/photo/auckland-town-hall/</span>
                         </div>
                     </li>
 
@@ -204,12 +204,12 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- LAYER -->
                         <div class="tp-caption rs-caption-3 sfb" data-x="center" data-hoffset="0" data-y="370" data-speed="800" data-start="3500" data-easing="Power4.easeOut" data-endspeed="300" data-endeasing="Power1.easeIn" data-captionhidden="off" style="z-index: 6">
-                            <span class="page-scroll"><a href="#about" class="btn-u btn-brd btn-brd-hover btn-u-light">{% trans "Search Arches" %}</a></span>
+                            <span class="page-scroll"><a href="{% url 'search_home' %}" class="btn-u btn-brd btn-brd-hover btn-u-light">{% trans "Search Arches" %}</a></span>
                         </div>
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo:  https://www.flickr.com/photos/pedrosz/ (CC BY 2.0)</span>
+                            <span class="">Photo:  https://nzhistory.govt.nz/media/photo/auckland-town-hall/</span>
                         </div>
                     </li>
                 </ul>
@@ -227,8 +227,8 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div id="about" class="about-image bg-grey">
             <div class="container">
                 <div class="title-v1">
-                    <h1>{% trans "What is Arches" %}</h1>
-                    <p>{% trans "Arches is <strong>awesome</strong> technology designed to ease Cultural Heritage data management.<br> Use Arches to build an inventory of cultural heritage assets such as objects, research activities, areas, datasets, and people or  organizations." %}</p>
+                    <h1>{% trans "What is Tohua" %}</h1>
+                    <p>{% trans "Tohua means to <strong>preserve, or conserve</strong> and is the name of Auckland's Cultural Heritage Information system (CHI).<br> Our Tohua CHI is powered by Arches, a leading open source platform for conservation." %}</p>
                 </div>
                 <div class="img-center">
                     <img class="img-responsive" src="{% static 'img/landing/disco.jpg' %}" alt="">
@@ -243,54 +243,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <section id="services">
         <div class="container content-lg">
             <div class="title-v1">
-                <h2>{% trans "Capabilities" %}</h2>
-                <p>{% trans "Arches can <strong> streamline your work</strong> so that you can focus on managing your assets.<br> Build interoperable, shareable, and secure <strong> cultural heritage data repositories</strong> as a natural part of your workflow." %}</p>
+                <h2>{% trans "CHI" %}</h2>
+                <p>See an overview of <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/tamaki-makaurau-aucklands-heritage.aspx">Tāmaki Makaurau / Auckland's heritage</a></p>               
             </div>
 
-            <div class="row service-box-v1">
-                <div class="col-md-4 col-sm-6">
-                    <div class="service-block service-block-default">
-                        <i class="icon-custom icon-lg icon-bg-u rounded-x fa fa-lightbulb-o"></i>
-                        <h2 class="heading-md">{% trans "Manage Heritage Inventories" %}</h2>
-                        <p></p>
-                        <ul class="list-unstyled">
-                            <li>{% trans "Heritage Objects" %}</li>
-                            <li>{% trans "Research Activities" %}</li>
-                            <li>{% trans "People and Orgnizations" %}</li>
-                            <li>{% trans "Important Areas" %}</li>
-                            <li>{% trans "Documents and Images" %}</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6">
-                    <div class="service-block service-block-default">
-                        <i class="icon-custom icon-lg icon-bg-u rounded-x icon-line icon-present"></i>
-                        <h2 class="heading-md">{% trans "Research Data" %}</h2>
-                        <p></p>
-                        <ul class="list-unstyled">
-                            <li>{% trans "Manage Digital Datasets" %}</li>
-                            <li>{% trans "Visualize Spectra" %}</li>
-                            <li>{% trans "Easy Dataset Import" %}</li>
-                            <li>{% trans "View & Manage Data" %}</li>
-                            <li>{% trans "Easy Access" %}</li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-12">
-                    <div class="service-block service-block-default">
-                        <i class="icon-custom icon-lg icon-bg-u rounded-x icon-line icon-rocket"></i>
-                        <h2 class="heading-md">{% trans "Interpretations & Results" %}</h2>
-                        <p></p>
-                        <ul class="list-unstyled">
-                            <li>{% trans "Manage Data Interpretations" %}</li>
-                            <li>{% trans "Share Research Results" %}</li>
-                            <li>{% trans "Tie Results to Iconography" %}</li>
-                            <li>{% trans "Centralize Results" %}</li>
-                            <li>{% trans "Publish Results" %}</li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
         </div>
     </section>
     <!-- End Services Section -->
@@ -304,7 +260,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
             <div class="row news-v1 text-center">
-                Add your content here
+                For the latest news, please sign-up for <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/te-kahu-focus-heritage-newsletter.aspx">Te Kāhu – Focus on Heritage</a> Auckland Council's quarterly Heritage eNewsletter, bringing you topical news, events, and important information on all things heritage.
             </div>
 
             <!-- <div class="row news-v1">
