--- a/docker/chi-arches/chiarches/arches/install/arches-templates/project_name/templates/index.htm
+++ b/docker/chi-arches/chiarches/arches/install/arches-templates/project_name/templates/index.htm
@@ -157,7 +157,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
+                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/" target="_blank">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
                         </div>
                     </li>
 
@@ -183,7 +183,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
+                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/" target="_blank">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
                         </div>
                     </li>
 
@@ -209,7 +209,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
 
                         <!-- Attribution -->
                         <div class="" style="position: absolute; top: 95%; left: 15px; color: #fff; padding: 10px; background: rgba(0,0,0,.5);">
-                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
+                            <span class="">Photo: Auckland Town Hall <a href="https://nzhistory.govt.nz/media/photo/auckland-town-hall/" target="_blank">https://nzhistory.govt.nz/media/photo/auckland-town-hall/</a> (New Zealand Ministry for Culture and Heritage)</span>
                         </div>
                     </li>
                 </ul>
@@ -241,7 +241,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
         <div class="container content-lg">
             <div class="title-v1">
                 <h2>{% trans "CHI" %}</h2>
-                <p>See an overview of <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/tamaki-makaurau-aucklands-heritage.aspx">Tāmaki Makaurau / Auckland's heritage</a></p>               
+                <p>See an overview of <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/tamaki-makaurau-aucklands-heritage.aspx" target="_blank">Tāmaki Makaurau / Auckland's heritage</a></p>               
             </div>
 
         </div>
@@ -257,7 +257,7 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             </div>
 
             <div class="row news-v1 text-center">
-                For the latest news, please sign-up for <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/te-kahu-focus-heritage-newsletter.aspx">Te Kāhu – Focus on Heritage</a> Auckland Council's quarterly Heritage eNewsletter, bringing you topical news, events, and important information on all things heritage.
+                For the latest news, please sign-up for <a href="https://www.aucklandcouncil.govt.nz/arts-culture-heritage/heritage/Pages/te-kahu-focus-heritage-newsletter.aspx" target="_blank">Te Kāhu – Focus on Heritage</a> Auckland Council's quarterly Heritage eNewsletter, bringing you topical news, events, and important information on all things heritage.
             </div>
 
             <!-- <div class="row news-v1">
@@ -312,19 +312,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
             <p>{{copyright_year}} &copy; {{copyright_text}} </p>
             <ul class="social-icons">
                 <li>
-                    <a href="#" data-original-title="Facebook" class="social_facebook rounded-x"></a>
+                    <a href="https://www.facebook.com/aklheritage"  target="_blank" data-original-title="Facebook" class="social_facebook rounded-x"></a>
                 </li>
                 <li>
-                    <a href="#" data-original-title="Twitter" class="social_twitter rounded-x"></a>
-                </li>
-                <li>
-                    <a href="#" data-original-title="Google Plus" class="social_googleplus rounded-x"></a>
-                </li>
-                <li>
-                    <a href="#" data-original-title="Pinterest" class="social_pintrest rounded-x"></a>
-                </li>
-                <li>
-                    <a href="#" data-original-title="Linkedin" class="social_linkedin rounded-x"></a>
+                    <a href="https://www.instagram.com/aklheritage" target="_blank" data-original-title="Instagram" class="social_instagram rounded-x"></a>
                 </li>
             </ul>
             <span class="page-scroll"><a href="#intro"><i class="fa fa-angle-double-up back-to-top"></i></a></span>
